--- a/web-data-viz/.env
+++ b/web-data-viz/.env
@@ -1,14 +1,13 @@
 AMBIENTE_PROCESSO=producao
 
 # Configurações de conexão com o banco de dados
-DB_HOST='seusDadosAqui'
-DB_DATABASE='seusDadosAqui'
-DB_USER='seusDadosAqui'
-DB_PASSWORD='seusDadosAqui'
-DB_PORT='seusDadosAqui'
+DB_HOST='localhost'
+DB_DATABASE='rizuta'
+DB_USER='Rizuta'
+DB_PASSWORD='urubu100'
+DB_PORT=3306
 
 # Configurações do servidor de aplicação
 APP_PORT=8080
-APP_HOST=localhost
-
+APP_HOST=10.18.35.175
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
